First commited as before_66357_rev1